kubernetes/deploy-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocery-list-deployment-1.1.0
  labels:
    app: grocery-list
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: grocery-list
  template:
    metadata:
      labels:
        app: grocery-list
        version: "1.1.0"
    spec:
      containers:
      - name: grocery-list
        image: zmad5306/grocery-list-ng:green
        ports:
        - containerPort: 80
