kubernetes/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: grocery-list-svc
  labels:
    app: grocery-list
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: grocery-list
