kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gl-ingress
spec:
  backend:
    serviceName: grocery-list-svc
    servicePort: 80
